# Unreal-Engine-5-MCP

./: .gitattributes  .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  CLAUDE.md  LyraStarterGame.uproject  PLAN.md  README.md  UE5_AI_BP.uproject  UE5_MCP.uproject  setup.bat
Plugins/BlueprintReader/Tests/: CMakeLists.txt
Plugins/BlueprintReader/Tests/BlueprintReaderMcp/: BlueprintReaderMcp.Build.cs  BlueprintReaderMcp.Target.cs
Plugins/BlueprintReader/Tests/BlueprintReaderMcp/Private/: main.cpp
Plugins/BlueprintReader/Tests/BlueprintReaderMcpCore/: BlueprintReaderMcpCore.Build.cs
Plugins/BlueprintReader/Tests/BlueprintReaderMcpCore/Private/: BlueprintReaderTypes.h  DaemonWatchdog.h  Diagnostics.cpp  Diagnostics.h  Env.cpp  Env.h
Plugins/BlueprintReader/Tests/BlueprintReaderMcpCore/Private/backends/: AutoBlueprintReader.cpp  AutoBlueprintReader.h  BackendFactory.cpp  BackendFactory.h  CachingBlueprintReader.cpp  CachingBlueprintReader.h  CommandletArgEncoding.h  CommandletBlueprintReader.cpp  CommandletBlueprintReader.h  CommandletErrorParse.h  CommandletResultParse.h  IBlueprintReader.h  MockBlueprintReader.cpp  MockBlueprintReader.h  ReadOnlyBlueprintReader.cpp  ReadOnlyBlueprintReader.h  SocketBlueprintReader.cpp  SocketBlueprintReader.h
Plugins/BlueprintReader/Tests/BlueprintReaderMcpCore/Private/jsonrpc/: CallContext.cpp  CallContext.h  HttpServerMain.cpp  HttpServerMain.h  HttpTransport.cpp  HttpTransport.h  Mcp.cpp  Mcp.h  Server.cpp  Server.h  SseFrame.cpp  SseFrame.h
Plugins/BlueprintReader/Tests/BlueprintReaderMcpCore/Private/roundtrip/: BPIRRoundtrip.cpp  BPIRRoundtrip.h  BPSpec.cpp  BPSpec.h  ReadToSpec.cpp  ReadToSpec.h  SpecToBP.cpp  SpecToBP.h
Plugins/BlueprintReader/Tests/BlueprintReaderMcpCore/Private/tools/: Analytics.cpp  Analytics.h  ApplyOps.cpp  ApplyOps.h  BlueprintTools.cpp  BlueprintTools.h  BlueprintToolsDetail.h  BlueprintTools_part2.cpp  BlueprintTools_part3.cpp  Bpir.cpp  Bpir.h  CompileFunction.cpp  CompileFunction.h  ContentBlocks.cpp  ContentBlocks.h  (+27 more)
Plugins/BlueprintReader/Tests/BlueprintReaderMcpTests/: BlueprintReaderMcpTests.Build.cs  BlueprintReaderMcpTests.Target.cs
Plugins/BlueprintReader/Tests/BlueprintReaderMcpTests/Private/: test_analytics.cpp  test_apply_ops.cpp  test_apply_ops_live.cpp  test_auto_backend.cpp  test_bpir.cpp  test_bpspec.cpp  test_caching_reader.cpp  test_commandlet_arg_encoding.cpp  test_commandlet_backend.cpp  test_commandlet_error_parse.cpp  test_cpp_class.cpp  test_cpp_codegen.cpp  test_cpp_lex.cpp  test_cpp_parse.cpp  test_cursor.cpp  test_daemon_lifecycle.cpp  test_daemon_watchdog.cpp  test_decompile.cpp  test_diagnostics.cpp  test_e2e_dump.cpp  test_ea_pull.cpp  test_editor_subscriptions.cpp  test_framing_stress.cpp  test_helpers.h  test_http_transport.cpp  test_json_projection.cpp  test_jsonrpc.cpp  test_logging.cpp  test_mcp.cpp  test_mock_backend.cpp  test_multi_instance.cpp  test_normalize_asset_path.cpp  test_output_schema_populated.cpp  test_phase_d.cpp  test_pie_live.cpp  test_progressive_default.cpp  test_prompts.cpp  test_protocol_compat.cpp  test_protocol_negotiation.cpp  test_read_actor_instance_live.cpp  (+20 more)
Plugins/BlueprintReader/Tests/BlueprintReaderMcpTests/fixtures/: BP_ExampleCharacter.json  BP_Inherited.json  BP_InputDemo.json  BP_PlayerController.json  BP_StatefulMacros.json
Plugins/BlueprintReader/mcp-server/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Plugins/BlueprintReader/mcp-server/fixtures/: BP_Enemy.json  BP_Pickup.json
Plugins/BlueprintReader/mcp-server/scripts/: roundtrip.ps1  smoke-batch-ops.ps1  smoke-cpp-roundtrip.ps1  smoke-decompile.ps1  smoke-transpile-cpp.ps1
Plugins/BlueprintReader/mcp-server/src/: BlueprintReaderTypes.h  Diagnostics.cpp  Diagnostics.h  Env.cpp  Env.h  main.cpp
Plugins/BlueprintReader/mcp-server/src/backends/: AutoBlueprintReader.cpp  AutoBlueprintReader.h  BackendFactory.cpp  BackendFactory.h  CachingBlueprintReader.cpp  CachingBlueprintReader.h  CommandletArgEncoding.h  CommandletBlueprintReader.cpp  CommandletBlueprintReader.h  IBlueprintReader.h  LiveBlueprintReader.cpp  LiveBlueprintReader.h  MockBlueprintReader.cpp  MockBlueprintReader.h  ReadOnlyBlueprintReader.cpp  ReadOnlyBlueprintReader.h  SocketBlueprintReader.cpp  SocketBlueprintReader.h
Plugins/BlueprintReader/mcp-server/src/jsonrpc/: Mcp.cpp  Mcp.h  Server.cpp  Server.h
Plugins/BlueprintReader/mcp-server/src/tools/: ApplyOps.cpp  ApplyOps.h  BlueprintTools.cpp  BlueprintTools.h  Bpir.cpp  CompileFunction.cpp  Decompile.cpp  Decompile.h  JsonProjection.cpp  JsonProjection.h  ToolCategories.cpp  ToolRegistry.cpp  ToolRegistry.h  TypeShorthand.h
Plugins/BlueprintReader/mcp-server/src/util/: SingleInstanceLock.cpp  SingleInstanceLock.h
Plugins/BlueprintReader/mcp-server/tests/: CMakeLists.txt  test_apply_ops.cpp  test_auto_backend.cpp  test_bpir.cpp  test_caching_reader.cpp  test_commandlet_arg_encoding.cpp  test_commandlet_backend.cpp  test_cpp_class.cpp  test_cpp_codegen.cpp  test_cpp_lex.cpp  test_cpp_parse.cpp  test_daemon_lifecycle.cpp  test_decompile.cpp  test_helpers.h  test_json_projection.cpp  test_jsonrpc.cpp  test_live_backend.cpp  test_mcp.cpp  test_mock_backend.cpp  test_multi_instance.cpp  test_protocol_negotiation.cpp  test_read_only.cpp  test_single_instance_lock.cpp  test_soak.cpp  test_socket_backend.cpp  test_tool_filter.cpp  test_tools.cpp  test_transpile_roundtrip.cpp  test_type_shorthand.cpp  test_types.cpp  test_unsupported_treatment.cpp
mcp-server/: CMakeLists.txt  README.md
mcp-server/fixtures/: BP_Pickup.json
mcp-server/scripts/: roundtrip.ps1
mcp-server/src/: main.cpp
mcp-server/src/backends/: BackendFactory.cpp  BackendFactory.h  CommandletBlueprintReader.cpp  CommandletBlueprintReader.h  IBlueprintReader.h  MockBlueprintReader.cpp  MockBlueprintReader.h
mcp-server/src/jsonrpc/: Mcp.cpp  Mcp.h  Server.cpp
mcp-server/src/tools/: BlueprintTools.cpp  BlueprintTools.h
mcp-server/tests/: CMakeLists.txt  test_commandlet_backend.cpp  test_jsonrpc.cpp  test_mcp.cpp  test_mock_backend.cpp  test_tools.cpp  test_types.cpp
(+875 files in other folders)
